tests/baselines/reference/objectTypesIdentityWithPrivates3.errors.txt
tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates3.ts(25,1): error TS2352: Conversion of type 'C3<T2>' to type 'C4' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Property 'y' is missing in type 'C3<T2>' but required in type 'C4'.


==== tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates3.ts (1 errors) ====
    interface T1 { }
    interface T2 { z }
    
    class C1<T> {
        private x;
    }
    
    class C2 extends C1<T1> {
        y;
    }
    
    var c1: C1<T2>;
    <C2>c1; // Should succeed (private x originates in the same declaration)
    
    
    class C3<T> {
        private x: T; // This T is the difference between C3 and C1
    }
    
    class C4 extends C3<T1> {
        y;
    }
    
    var c3: C3<T2>;
    <C4>c3; // Should fail (private x originates in the same declaration, but different types)
    ~~~~~~
!!! error TS2352: Conversion of type 'C3<T2>' to type 'C4' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
!!! error TS2352:   Property 'y' is missing in type 'C3<T2>' but required in type 'C4'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/typeAndMemberIdentity/objectTypesIdentityWithPrivates3.ts:21:5: 'y' is declared here.